Added brightness names
