# www/html/api/swagger.yaml
@@ -27,6 +27,8 @@ tags:
   description: "Retrieves, edits, and deletes outputs from the controller"
 - name: "Actions"
   description: "Retrieves, edits, and deletes actions an Input has on an Output"
+- name: "Settings"
+  description: "Retrieves and edits system settings"
 
 schemes:
 - "http"
@@ -286,6 +288,9 @@ paths:
             type: object
             required:
               - name
+              - hexValue
+              - brightnessMinimum
+              - brightnessMaximum
             properties:
               name:
                 type: string
@@ -377,6 +382,9 @@ paths:
           type: object
           required:
             - name
+            - hexValue
+            - brightnessMinimum
+            - brightnessMaximum
           properties:
             name:
               type: string
@@ -443,6 +451,197 @@ paths:
             $ref: "#/definitions/Error"
         500:
           description: "Internal Server Error"
+
+  /brightnessName:
+    get:
+      tags:
+      - "Switches"
+      produces:
+      - "application/json"
+      description: "Retrieves a list of all named button LED brightness levels" 
+      operationId: listBrightnessName
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/BrightnessName"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Internal Server Error"
+    post:
+      tags:
+      - "Switches"
+      produces:
+      - "application/json"
+      consumes:
+      - "application/json"
+      description: "Creates a new named button LED brightness level" 
+      operationId: createBrightnessName
+      parameters:
+        - in: body
+          name: brightnessName
+          description: "The button LED brightness name to create"
+          schema:
+            type: object
+            required:
+              - name
+              - brightnessValue
+            properties:
+              name:
+                type: string
+                description: "Unique name of the brightness level"
+              displayName:
+                type: string
+                description: "A descriptive display name of the brightness level"
+              brightnessValue:
+                type: integer
+                minimum: 0
+                maximum: 100
+                description: "The value this brightness name represents"
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/BrightnessName"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Internal Server Error"
+
+
+  /brightnessName/{id}:
+    get:
+      tags:
+      - "Switches"
+      produces:
+      - "application/json"
+      description: "Retrieves a named button LED brightness level by ID" 
+      operationId: getBrightnessNameByID
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of the named button LED brightness to return"
+        required: true
+        type: "integer"
+        format: "int32"
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+              $ref: "#/definitions/BrightnessName"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Internal Server Error"
+    patch:
+      tags:
+      - "Switches"
+      produces:
+      - "application/json"
+      consumes:
+      - "application/json"
+      description: "Creates a new named button LED brightness level" 
+      operationId: editBrightnessName
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of the named button LED brightness to return"
+          required: true
+          type: "integer"
+          format: "int32"
+        - in: body
+          name: brightnessName
+          description: "The button LED brightness name to edit"
+          schema:
+            type: object
+            required:
+              - name
+              - brightnessValue
+            properties:
+              name:
+                type: string
+                description: "Unique name of the brightness level"
+              displayName:
+                type: string
+                description: "A descriptive display name of the brightness level"
+              brightnessValue:
+                type: integer
+                minimum: 0
+                maximum: 100
+                description: "The value this brightness name represents"
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/BrightnessName"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Internal Server Error"
+    delete:
+      tags:
+      - "Switches"
+      produces:
+      - "application/json"
+      description: "Deletes a named button LED brightness level" 
+      operationId: deleteBrightnessName
+      security: 
+        - ApiKeyAuth: [] 
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of the named button LED brightness level to delete"
+        required: true
+        type: "integer"
+        format: "int32"
+      responses:
+        200:
+          description: "Success"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not Found"
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: "Internal Server Error"
+
+
 
 #Security
 securityDefinitions:
@@ -513,3 +712,20 @@ definitions:
         maximum: 100
         description: "The maximum brightness this LED can be set"
 
+  BrightnessName:
+    type: object
+    properties:
+      id:
+        type: integer
+        description: "Unique ID of the brightness name"
+      name:
+        type: string
+        description: "Unique name of the brightness level"
+      displayName:
+        type: string
+        description: "A descriptive display name of the brightness level"
+      brightnessValue:
+        type: integer
+        minimum: 0
+        maximum: 100
+        description: "The value this brightness name represents"
